# AirTyping

./: .gitignore  README.md
StreamingDepthDataFromTheTrueDepthCamera/TrueDepthStreamer/: CameraViewController.swift  DepthToJETConverter.swift  FilterRenderer.swift  OpenCVWrapper.hpp  OpenCVWrapper.mm  TrueDepthStreamer-Bridging-Header.h
StreamingDepthDataFromTheTrueDepthCamera/TrueDepthStreamer.xcodeproj/: project.pbxproj
StreamingDepthDataFromTheTrueDepthCamera/TrueDepthStreamer/Base.lproj/: Main.storyboard
tester/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  img.txt  reader.py  test  wrapper.cpp
